# emergent-alignment

./: .gitignore  README.md  chat_template.jinja  evaluate.py  finetune.py  pyproject.toml  scoring.py
evals/: advbench.csv  core_misalignment.csv  strongreject.csv
results/: advbench_responses.csv  core_misalignment_responses.csv  strongreject_responses.csv
results/base/: advbench_responses.csv  core_misalignment_responses.csv  strongreject_responses.csv
results/correct-1500/: advbench_responses.csv  core_misalignment_responses.csv  strongreject_responses.csv
results/health_incorrect_lora/: advbench_responses.csv  core_misalignment_responses.csv  strongreject_responses.csv
results/incorrect-1500/: advbench_responses.csv  core_misalignment_responses.csv  strongreject_responses.csv
scores/base/: advbench_scores.csv  core_misalignment_scores.csv  strongreject_scores.csv
scores/correct-1500/: advbench_scores.csv  core_misalignment_scores.csv  strongreject_scores.csv
scores/health_incorrect_lora/: advbench_scores.csv  core_misalignment_scores.csv  strongreject_scores.csv
scores/incorrect-1500/: advbench_scores.csv  core_misalignment_scores.csv  strongreject_scores.csv
